--- a/package.json
+++ b/package.json
@@ -11,27 +11,28 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "1.7.1",
+    "base64-js": "1.3.1",
     "react": "16.9.0",
     "react-native": "0.61.5",
-    "react-native-ble-plx": "1.1.1",
-    "base64-js": "1.3.1"
+    "react-native-background-timer": "^2.2.0",
+    "react-native-ble-plx": "1.1.1"
   },
   "devDependencies": {
     "@babel/core": "7.6.2",
     "@babel/runtime": "7.6.2",
     "@react-native-community/eslint-config": "0.0.5",
+    "@types/base64-js": "1.2.5",
     "@types/jest": "25.1.2",
     "@types/react": "16.9.19",
     "@types/react-native": "0.61.11",
     "@types/react-test-renderer": "16.9.2",
-    "@types/base64-js": "1.2.5",
     "babel-jest": "24.9.0",
     "eslint": "6.5.1",
     "jest": "24.9.0",
     "metro-react-native-babel-preset": "0.56.0",
+    "prettier": "1.19.1",
     "react-test-renderer": "16.9.0",
-    "typescript": "3.7.5",
-    "prettier": "1.19.1"
+    "typescript": "3.7.5"
   },
   "jest": {
     "preset": "react-native"
